tests/enum_into/compile_fail/container/invalid_target_kind.stderr
error: expected `,`
 --> tests/enum_into/compile_fail/container/invalid_target_kind.rs:4:19
  |
4 | #[enum_into(Target::Unit)] // Should be #[enum_into(Target)]
  |                   ^
